changes for section8-72

--- a/notes.css
+++ b/notes.css
@@ -53,6 +53,9 @@ button {
     height: 20px; 
     vertical-align: baseline;
 }
+a {
+    text-decoration: none;
+}
 #actions-top {
     border-bottom: 1px solid black;
     margin: 1rem 0;
